test/files/ill-typed/010_let_lambda_partial_application.lam
let applfunc = λf. f 1 1 in applfunc (let func = λx. λy. x + 1 - y in func 1)